[package]
name = "self-meter"
description = """
    A tiny library to measure resource usage of the process it's used in.
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["linux", "monitoring", "meter"]
homepage = "https://github.com/tailhook/self-meter"
documentation = "https://docs.rs/self-meter"
version = "0.4.4"
authors = ["paul@colomiets.name"]

[dependencies]
serde = "0.9.11"
serde_derive = "0.9.11"
quick-error = "1.1.0"
libc = "0.2.16"
num_cpus = "1.1.0"

[dev-dependencies]
serde_json = "0.9.9"

[lib]
name = "self_meter"
path = "src/lib.rs"

